# type-k-interface-02

./: .gitignore  README.md
case/: case_back.dxf  case_plate.dxf  keyboard_layout.json  keyboard_layout.py  pyproject.toml
firmware/: Makefile
firmware/src/: animation.c  animation.h  debug.h  defs.h  keymap.c  keymap.h  led.h  main.c  main.h  math.c  math.h  oled.c  oled.h  reset.c  reset.h  timer.c  timer.h  twi.c  twi.h
firmware/src/animation/: animation.c  animation.h  animation_defs.h  led_animation.c  led_animation.h  oled_animation.c  oled_animation.h  shared_animation.c  shared_animation.h
firmware/src/font/: fonts.c
firmware/src/fonts/: fonts.h  generate.js  kana-to-ascii.js  package.json
firmware/src/keyboard/: encoder.c  keyboard.c  keyboard.h  keyscanner.c  keyscanner.h
firmware/src/keys/: encoder.c  encoder.h  (+4 more)
pcb/: Unit_02.kicad_prl  Unit_02.kicad_pro  Unit_02.kicad_sch  Unit_02.kicad_sym  find_leds.py  fp-info-cache  fp-lib-table  place_diodes.py  sym-lib-table
pcb/Unit_02.pretty/: AVR_ISP_6.kicad_mod  Elite-C.kicad_mod  Gfx_EvangelionUnit02.kicad_mod  Gfx_TypeKInterface02.kicad_mod  LED_WS2812B_Reverse_Mount.kicad_mod  OLED_SSD1306.kicad_mod  RotaryEncoder_Alps_EC11E-Switch_Vertical_H20mm.kicad_mod  SPST_MJTP1117.kicad_mod  SW_Cherry_MX_1.00u_PCB.kicad_mod  SW_Cherry_MX_1.25u_PCB.kicad_mod  SW_Cherry_MX_1.50u_PCB.kicad_mod  SW_Cherry_MX_1.75u_PCB.kicad_mod  SW_Cherry_MX_2.00u_PCB.kicad_mod  SW_Cherry_MX_2.00u_Vertical_PCB.kicad_mod  SW_Cherry_MX_2.25u_PCB.kicad_mod  SW_Cherry_MX_2.75u_PCB.kicad_mod  SW_Cherry_MX_6.25u_PCB.kicad_mod
(+30 files in other folders)
